--- a/src/input.css
+++ b/src/input.css
@@ -6,21 +6,17 @@ body {
   @apply font-inter;
 }
 
-@layer utilities {
-  .bg-svg-grid__light {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(226 232 240 / 0.8)' stroke-dasharray='5 3' transform='scale(1%2c -1)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
-  }
-
-  .bg-svg-grid__dark {
-    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(248 250 252 / .025)' stroke-dasharray='5 3' transform='scale(1%2c -1)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
-  }
-}
-
 /* navbar fixed */
 .navbar-fixed {
-  @apply fixed z-[999] bg-white bg-opacity-70 backdrop-blur-sm dark:bg-none dark:backdrop-blur-0;
+  @apply dark:border-divider-light shadow-inset__light dark:shadow-inset__dark fixed z-[999] bg-white bg-opacity-70 backdrop-blur-lg dark:bg-transparent dark:backdrop-blur-lg;
   /* box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1); */
   transition-duration: 300ms;
+
+  /* border-divider-light border-b bg-white/70 backdrop-blur dark:border-divider-dark dark:bg-slate-900/80 fm:hidden */
+}
+
+.border-divider-light {
+  @apply border border-white;
 }
 
 /* Hamburger */
@@ -114,5 +110,27 @@ body {
 
   .animate {
     @apply transition duration-200 ease-in-out;
+  }
+}
+
+@layer utilities {
+  .color-animate {
+    @apply transition-colors duration-1000;
+  }
+
+  .bg-svg-grid__light {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(226 232 240 / 0.8)' stroke-dasharray='5 3' transform='scale(1%2c -1)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+  }
+
+  .bg-svg-grid__dark {
+    background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32' width='32' height='32' fill='none' stroke='rgb(248 250 252 / .025)' stroke-dasharray='5 3' transform='scale(1%2c -1)'%3e%3cpath d='M0 .5H31.5V32'/%3e%3c/svg%3e");
+  }
+
+  .shadow-inset__light {
+    box-shadow: inset 0 -1px 0 0 rgba(0, 0, 0, 0.1);
+  }
+
+  .shadow-inset__dark {
+    box-shadow: inset 0 -1px 0 0 rgba(255, 255, 255, 0.1);
   }
 }
